# processing_pipeline

./: .dockerignore  .gitignore  .gitmodules  Apptainer  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yml  pyproject.toml  setup.cfg  setup.py
helpers/: generate_params.py
me_pipeline/: __init__.py  bids.py  heuristics.py  params.py  params.toml  utils.py  xnat_api.py
me_pipeline/grayplots/: grayplot_generator.py  grayplot_helpers.py
me_pipeline/scripts/: SurfaceMappingCiftiCreation_v3_SE.csh  __init__.py  batch_convert_to_bids.py  batch_wb_image_capture_volreg.py  convert_to_bids.py  download_dataset.py  generate_grayplots.py  generate_params.py  me_sdc.py  medic.py  one_step_resampling_framewise.py  parse_bids.py  run_pipeline.py  run_script.py
me_pipeline/scripts/data/: FreeSurferSubcorticalLabelTableLut_FFM.txt  FreeSurferSubcorticalLabelTableLut_GRAY.txt  FreeSurferSubcorticalLabelTableLut_VENTRICLE.txt  FreeSurferSubcorticalLabelTableLut_nobrainstem_LEFT.txt  FreeSurferSubcorticalLabelTableLut_nobrainstem_LR.txt  FreeSurferSubcorticalLabelTableLut_nobrainstem_RIGHT.txt  FreeSurferSubcorticalLabelTableLut_nobrainstem_sub_L_cbll_R.txt  FreeSurferSubcorticalLabelTableLut_nobrainstem_sub_R_cbll_L.txt
me_pipeline/scripts/grayplots/: grayplot_generator.py  grayplot_helpers.py
scripts/: Functional_pp_batch_ME_NORDIC_MESEFM_090821.csh  Structural_pp_090121.csh
tests/: test_bids.py
tools/: get_4dfp.sh  grab_data_cnda.sh  install_4dfp.sh  install_freesurfer.sh  install_fsl.sh  install_mcr.sh  install_nordic.sh  install_workbench.sh  license.txt  setenv.sh
tools/FSLTransforms/: 711-2B_111_to_711-2B_222.mat  711-2B_111_to_711-2B_222AT.mat  711-2B_111_to_711-2B_333.mat  711-2B_111_to_MNI152_T1.mat  MNI152_T1_to_711-2B_111.mat  MNI152_T1_to_711-2B_222.mat  MNI152_T1_to_711-2B_222AT.mat  MNI152_T1_to_711-2B_333.mat  mni_icbm152_to_711-2B_222.mat  mni_icbm152_to_711-2B_222AT.mat  mni_icbm152_to_711-2B_333.mat  mni_icbm152_to_MNI152_T1.mat
tools/matlab/make_grayplots_TL/: build_make_grayplots_TL.m
tools/me_fmri/: MEfmri_4dfp.c  MEfmri_4dfp.mak  hist.c  hist.h
tools/refdir_extras/: 1  FS_GM.lst  eyes_111z_not.4dfp.hdr  eyes_111z_not.4dfp.ifh  eyes_222z_not.4dfp.hdr  eyes_222z_not.4dfp.ifh  eyes_333z_not.4dfp.hdr  eyes_333z_not.4dfp.ifh  eyes_333z_not.4dfp.img
tools/refdir_extras/MNI152/: 711-2B_to_MNI152lin_T1.mat  711-2B_to_MNI152lin_T1_t4  MNI152lin_T1_to_711-2B.mat  MNI152lin_T1_to_711-2B_t4  eyes_MNI152_1mmz_not.4dfp.hdr  eyes_MNI152_1mmz_not.4dfp.ifh  eyes_MNI152_2mmz_not.4dfp.hdr  eyes_MNI152_2mmz_not.4dfp.ifh  eyes_MNI152_2mmz_not.4dfp.img  eyes_MNI152_3mmz_not.4dfp.hdr  eyes_MNI152_3mmz_not.4dfp.ifh  (+1 more)
tools/updated_4dfp_scripts/: MEBIDS2params.awk  MEfmri_4dfp_static  compute_SNR_4dfp.csh  find_hist_mode  ncontig_format.awk  ncontig_format.csh  one_step_resampling_AT.csh  pha2epi.csh  sefm_pp_AT.csh  xmgr_FD  xmgr_FD_prototype.xmgr
(+17 files in other folders)
