[project]
name = "processing_pipeline"
description = "^ processing pipeline is a temp name"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [
  { name = "Vahdeta Suljic", email = "suljic@wustl.edu" },
  { name = "Andrew Van", email = "vanandrew@wustl.edu" },
]
keywords = ["neuroimaging", "preprocessing", "pipeline"]
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
urls = { github = "https://github.com/DosenbachGreene/processing_pipeline" }
version = "0.0.1"
dynamic = ["entry-points"]
dependencies = [
  "memori >= 0.3.6",
  "nibabel >= 4.0.2",
  "indexed-gzip >= 1.7.0",
  "xnat >= 0.4.3",
  "pydicom >= 2.3.1",
  "matplotlib >= 3.5.1",
  "numpy >= 1.23.5",
  "scipy >= 1.8.1",
  "pandas >= 1.4.2",
  "heudiconv >= 0.13.1",
  "toml >= 0.10.2",
  "seaborn >= 0.11.2",
]

[project.optional-dependencies]
medic = ["warpkit >= 0.0.1"]
dev = ["pytest >= 7.2.0", "pytest-pycodestyle >= 2.3.1", "black >= 22.10.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["me_pipeline*"]
exclude = ["tests*"]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.pytest.ini_options]
addopts = "-v --pycodestyle"
testpaths = ["tests", "me_pipeline"]

[tool.coverage.run]
command_line = "-m pytest"
source = []

[tool.coverage.report]
show_missing = true
precision = 2
